--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.7",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "firebase": "^10.3.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.6",
     "react-chartjs-2": "^5.2.0",
@@ -26,6 +27,7 @@
     "react-toastify": "^9.1.3",
     "sass": "^1.66.1",
     "styled-components": "^6.0.7",
+    "uuid": "^9.0.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
