--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.9.0",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
+    "dayjs": "^1.11.9",
     "firebase": "^10.3.0",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.6",
