--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/icons-material": "^5.14.7",
     "@mui/material": "^5.14.7",
     "antd": "^5.9.0",
+    "antd-table-saveas-excel": "^2.2.1",
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "dayjs": "^1.11.9",
